[tool.poetry]
name = "drf-yasg-examples"
version = "0.1.1"
description = "Inspector for add example in drf-yasg docs"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6.1"
drf-yasg = "^1.17.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
